fix alignment

--- a/src/pages/HomePage.css
+++ b/src/pages/HomePage.css
@@ -105,6 +105,7 @@
 
 .HomePage .stats .stat .value {
   font-size: 24px;
+  display: flex;
 }
 
 .HomePage .stats .ui.button.inverted.primary {
